🦭🔊 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@
 </head>
 <body>
 
-
+<h1>
+  Poker Face
+  </h1>
   
+  <h2>
+    By:Brandon Wong
+  </h2>
+  
+  <p>
+    Luck?
+    
+  </p>
+  
+  <p>
+    Who needs luck?
+  </p>
+  
+  <p>
+    I can just be tough
+  </p>
+  
+  <p>
+    and pull off a bluff
+  </p>
+  
+  <p>
+    That money is mine
+  </p>
+  
+  <p>
+    That's if my cards are fine
+  </p>
+  
+  <p>
+    If they aren't,
+  </p>
+  
+  <p>
+    I can just pull out my poker face
+  </p>
+  
+  <p>
+    and win without a trace.
+  </p>
 </body>
 </html>
